<resources>
    <!--    Images Descriptons-->
    <string name="about_image">This image indicates a task with a dreamy girl</string>
    <string name="about_image_1">This image indicates a new image to be added</string>

    <!--    Getting Started Activity -->
    <string name="app_name">Taskaty</string>
    <string name="welcome">Welcome To Taskaty!</string>
    <string name="start">Getting Started</string>
    <string name="about">Your go-to simple task management app. Your tool for effortlessly organising tasks.</string>

    <!--    Welcome Back Activity -->
    <string name="welcome_back">Welcome Back To Taskaty!</string>
    <string name="back">Back to Tasks</string>
    <string name="about_back">Yayy, You made it back to Your go-to simple task management app.</string>

    <!--    Shared on both Add & Update-->
    <string name="description">Description</string>
    <string name="due">Due Date</string>
    <string name="category">Category</string>
    <string-array name="category_array">
        <item>None</item>
        <item>Personal</item>
        <item>Work</item>
        <item>Study</item>
        <item>To-buy</item>
        <item>To-read</item>
        <item>To-watch</item>
    </string-array>

    <!--    Adding new task activity -->
    <string name="newTask">New Task</string>
    <string name="title">Title</string>
    <string name="create">Create a new Task</string>
    <string name="warning">Enter a title to proceed</string>
    <string name="pick_date">Pick Date</string>

    <!--    Added Task Activity-->
    <string name="added">Your New Task is Added!</string>
    <string name="back_to_life">Hop Back to Work!</string>

    <!--    Update Task Activity -->
    <string name="updateTask">Edit Task</string>
    <string name="update">Edit Task</string>
    <string name="done">Done</string>
    <string name="update_date">Edit Date</string>

    <!--    Completed Task Activity -->
    <string name="completed">Your Task is Completed!</string>
    <string name="check_tasks">Want to Check your List?</string>

    <!--    Updated Task Activity -->
    <string name="updated">Your Task is Updated!</string>

    <!--    Deleted Task Activity -->
    <string name="deleted">Your Task is Deleted!</string>
    <!--    Nothing was found Status inform-->
    <string name="not_found">Nothing was found...</string>

    <!--    TaskList Activity -->
    <string name="search">Search</string>

    <!--    Search Activity -->
    <string name="keyword">Keyword</string>
    <string name="searchTitle">Find tasks</string>
    <string name="month">Month</string>
    <string-array name="months">
        <item>All</item>
        <item>January</item>
        <item>February</item>
        <item>March</item>
        <item>April</item>
        <item>May</item>
        <item>June</item>
        <item>July</item>
        <item>August</item>
        <item>September</item>
        <item>October</item>
        <item>November</item>
        <item>December</item>
    </string-array>
    <string-array name="category_array_search">
        <item>All</item>
        <item>None</item>
        <item>Personal</item>
        <item>Work</item>
        <item>Study</item>
        <item>To-buy</item>
        <item>To-read</item>
        <item>To-watch</item>
    </string-array>

    <!--    Search Results Found Activity -->
    <string name="foundTitle">Found Tasks</string>
    <string name="backMain">Back to main Tasks List</string>

</resources>