<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:foregroundGravity="center">


    <!-- ListView to display tasks -->
    <TextView
        android:id="@+id/appName2"
        android:layout_width="150dp"
        android:layout_height="65dp"
        android:fontFamily="@font/mirza"
        android:foregroundGravity="center"
        android:text="@string/app_name"
        android:textColor="#2F2E41"
        android:textSize="48sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.055" />

    <ListView
        android:id="@+id/taskListView"
        android:layout_width="348dp"
        android:layout_height="489dp"
        android:background="@android:color/background_light"
        android:clipToPadding="false"
        android:divider="@android:color/darker_gray"
        android:dividerHeight="0.5dp"
        android:footerDividersEnabled="false"
        android:headerDividersEnabled="false"
        android:padding="16dp"
        android:scrollbarSize="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.421" />

    <ImageButton
        android:id="@+id/add"
        android:layout_width="204dp"
        android:layout_height="154dp"
        android:background="#FFFFFF"
        android:contentDescription="@string/about_image_1"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/add" />

    <Button
        android:id="@+id/search"
        android:layout_width="168dp"
        android:layout_height="60dp"
        android:text="@string/search"
        app:icon="?android:attr/actionModeWebSearchDrawable"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.127"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.938" />

</androidx.constraintlayout.widget.ConstraintLayout>

